monitoring/grafana/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Grafana"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "grafana.png"
    gethomepage.dev/description: "Dashboards"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-grafana
  hostnames:
    - grafana.stevevaradi.me
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: lan-only-grafana
  namespace: monitoring
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: grafana
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 192.168.0.0/24
            - 10.192.1.0/24
